Completing the first part of Assignment 6: the new DB layout, the network communication means, the synchronization manager and the synchronization progress dialog along with the conflict resolution dialog (i.e., everything but the synchronization logic)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,5 +12,6 @@
     	</activity>
 	<activity android:name=".TodoEdit"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" /> 
     <uses-sdk android:minSdkVersion="4" />
 </manifest> 
